# SyncTailscaleDNS

./: .gitignore  111.py  LICENSE  README.md  main.py  pyproject.toml  sonar-project.properties
modules/: __init__.py  addRecordAliDNS.py  listNodes.py
utils/: __init__.py  addRecordAliDNS.py  addRecordCloudflare.py  base.py  listNodes.py
utils/provider/: alidns.py  cloudflare.py  dnspod.py
