[project]
name = "synctailscaledns"
version = "0.1.0"
description = "add tailscale nodes address sync public dns"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-alidns20150109>=3.5.10",
    "black>=25.1.0",
    "cloudflare>=4.3.1",
    "coredumpy>=0.4.3",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "tencentcloud-sdk-python-common>=3.0.1451",
    "tencentcloud-sdk-python-dnspod>=3.0.1443",
]
